# FOUL

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  nodemon.json  package-lock.json  package.json  tsconfig.json
assets/: index.html
assets/ui/: Global.css  Global.css.map
assets/ui/Credits/: Credits.html  credits.css  credits.css.map
assets/ui/InGame/: InGame.css  InGame.css.map  InGame.html
assets/ui/Leaderboard/: Leaderboard.css  Leaderboard.css.map  Leaderboard.html
assets/ui/MainMenu/: MainMenu.css  MainMenu.css.map  MainMenu.html
assets/ui/Pause/: Pause.css  Pause.css.map  Pause.html
assets/ui/Play/: Play.css  Play.css.map  Play.html
assets/ui/scripts/: InGame.js  Leaderboard.js  MainMenu.js  Pause.js  Play.js
release/: setup.vbs  uninstall.vbs
scripts/: build.sh  dev.sh  release.sh  watch.sh
scss/: Global.scss
scss/Credits/: credits.scss
scss/InGame/: InGame.scss
scss/Leaderboard/: Leaderboard.scss
scss/MainMenu/: MainMenu.scss
scss/Pause/: Pause.scss
scss/Play/: Play.scss
src/: main.cpp
src/Behaviours/Ball/: Ball.cpp  Ball.h
src/Behaviours/LevelManager/: LevelManager.cpp  LevelManager.h
src/Behaviours/PlayerController/: PlayerController.cpp  PlayerController.h
src/Behaviours/Recrut/: Recrut.cpp  Recrut.h
src/Behaviours/UIManager/: UIManager.cpp  UIManager.h
src/Data/: Data.h
src/Scenes/MainScene/: MainScene.cpp  MainScene.h
src/Scenes/MenuScene/: MenuScene.cpp  MenuScene.h
ts/: InGame.ts  Leaderboard.ts  MainMenu.ts  Pause.ts  Play.ts
